--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -17,7 +17,7 @@
 		min-height: 100px;
 
 		img {
-			width: 80px;
+			/*width: 80px;*/
 			margin-right: 5px;
 			margin-bottom: 5px;
 			position: absolute;
