--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -6,11 +6,11 @@
 
 <% @products.each do |product| %>
 	<div class="entry">
-		<%=	image_tag(product.image_url) %>
+		<%=	image_tag product.image_url_url(:thumb) if product.image_url? %>
 		<h3><%= product.title %></h3>
 		<p><%= sanitize(product.description) %></p>
 		<div class="price_line">
-			<span class="price"><%#= number_to_currency(product.price) %></span>
+			<span class="price"><%= number_to_currency(product.price) %></span>
 			<%= button_to t('.add_html'), line_items_path(product_id: product), remote: true %>
 		</div>
 	</div>
