--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for@product,  html: {:multipart => true} do |f| %>
+<%= form_for @product,  html: {:multipart => true} do |f| %>
   <% if @product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -23,10 +23,15 @@
     <%= f.label :image_url %><br>
     <%= f.file_field :image_url %>
 
-    <p>
+  <p>
     <%= f.label :remote_image_url_url, "or image URL" %><br />
     <%= f.text_field :remote_image_url_url %>
   </p>
+
+    <%= f.fields_for :images do |builder| %>
+      <%= render 'image_fields', f: builder %>
+    <% end %>
+    <%= link_to_add_fields 'Add image', f, :images %>
   </div>
   <div class="field">
     <%= f.label :price %><br>
